--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ html {
 .container {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: auto;
+  top: 0;
 }
 .section {
   position: relative;
@@ -141,6 +142,14 @@ html {
 .page2 .item p {
   font-size: 20px;
 }
-.container .section:nth-child(4) {
-  background-color: red;
+.section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
 }
+
+/* .container .section:nth-child(4) {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+} */
